--- a/trading.css
+++ b/trading.css
@@ -13,9 +13,7 @@
 #myResources {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: flex-start;
     padding: 8px;
-    padding-top: 0;
-    margin-top: 0;
+    padding-top: 8px;
 }
